{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 252,
  "lineage": "3c8696b8-5abf-e3ce-36c5-a16a05553b52",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "Dev-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/publicIPAddresses/Dev-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.168.242.227",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Dev-ip",
            "resource_group_name": "Dev-RG",
            "sku": "Basic",
            "tags": {
              "Environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Dev-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/networkInterfaces/Dev-NIC",
            "internal_domain_name_suffix": "5m2ypbe3pt0ujnnlxu5zjh0tyd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/publicIPAddresses/Dev-ip",
                "subnet_id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network/subnets/Dev-Subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-18-D2-CC",
            "name": "Dev-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Dev-RG",
            "tags": {
              "Environment": "Dev"
            },
            "virtual_machine_id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Compute/virtualMachines/Dev-VM"
          },
          "dependencies": [
            "azurerm_public_ip.Dev-ip",
            "azurerm_resource_group.Dev-RG",
            "azurerm_subnet.Dev-Subnet",
            "azurerm_virtual_network.Dev-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Dev-SGP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/networkSecurityGroups/Dev-SGP",
            "location": "eastus",
            "name": "Dev-SGP",
            "resource_group_name": "Dev-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Dev-SGP-Rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Dev-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Dev-SGP-Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/networkSecurityGroups/Dev-SGP/securityRules/Dev-SGP-Rule",
            "name": "Dev-SGP-Rule",
            "network_security_group_name": "Dev-SGP",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Dev-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Dev-SGP",
            "azurerm_resource_group.Dev-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Dev-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/publicIPAddresses/Dev-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.168.242.227",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Dev-ip",
            "resource_group_name": "Dev-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Dev-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Dev-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network/subnets/Dev-Subnet",
            "name": "Dev-Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Dev-RG",
            "virtual_network_name": "Dev-network"
          },
          "dependencies": [
            "azurerm_resource_group.Dev-RG",
            "azurerm_virtual_network.Dev-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Dev-Sub-Group-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network/subnets/Dev-Subnet",
            "network_security_group_id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/networkSecurityGroups/Dev-SGP",
            "subnet_id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network/subnets/Dev-Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.Dev-SGP",
            "azurerm_resource_group.Dev-RG",
            "azurerm_subnet.Dev-Subnet",
            "azurerm_virtual_network.Dev-VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Dev-VN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "848739fb-7c9d-44f5-b5ab-bd3f949f53c3",
            "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network",
            "location": "eastus",
            "name": "Dev-network",
            "resource_group_name": "Dev-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/virtualNetworks/Dev-network/subnets/Dev-Subnet",
                "name": "Dev-Subnet",
                "security_group": "/subscriptions/871a6abc-8fe8-4427-ae0a-e96b2aced47a/resourceGroups/Dev-RG/providers/Microsoft.Network/networkSecurityGroups/Dev-SGP"
              }
            ],
            "tags": {
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Dev-RG"
          ]
        }
      ]
    }
  ]
}